Implement PuKK proof of concept server
